# Breakout

./: .gitignore  CMakeLists.txt  README.md  Setup.bat  Setup_Mac.sh  Setup_Win.bat
Engine/src/: main.cpp
Game/include/: Ball.hpp  Brick.hpp  Game.hpp  GameManager.hpp  HealthBar.hpp  Player.hpp
Game/src/: Ball.cpp  Brick.cpp  Game.cpp  GameManager.cpp  HealthBar.cpp  Player.cpp  main.cpp
Phezu/include/phezu/: Engine.hpp  Input.hpp  Phezu.hpp  Physics.hpp  Renderer.hpp  Window.hpp
Phezu/include/phezu/maths/: Math.hpp
Phezu/include/phezu/scene/: Entity.hpp  EntityPrefab.hpp  EntityTemplate.hpp  HierarchyEntity.hpp  Prefab.hpp  PrefabEntity.hpp  Scene.hpp  SceneManager.hpp  TemplateEntity.hpp
Phezu/include/phezu/scene/components/: BehaviourComponent.hpp  BehaviourComponentPrefab.hpp  DataComponent.hpp  PhysicsData.hpp  RenderData.hpp  ShapeData.hpp  TransformData.hpp
Phezu/src/: BehaviourComponentPrefab.cpp  Engine.cpp  Entity.cpp  EntityPrefab.cpp  EntityTemplate.cpp  HierarchyEntity.cpp  Input.cpp  Math.cpp  Phezu.cpp  Physics.cpp  PrefabEntity.cpp  Random.cpp  Renderer.cpp  Scene.cpp  SceneManager.cpp  ShapeData.cpp  TemplateEntity.cpp  TransformData.cpp  Window.cpp
